Thu Jan 13 13:21:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c: delete dashes to make lines 80 chars, Patched by
	  Shota Fukumori (sora_h).  [Bug #4275] [ruby-dev:43021]

Thu Jan 13 13:21:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c: fix misspelling of CrashReporter, Patched by Shota
	  Fukumori (sora_h).  [Bug #4275] [ruby-dev:43021]

Thu Jan 13 06:27:29 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* error.c: Exception#to_s should actually call to_s.

Thu Jan 13 00:32:54 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (get_nth_dirname): decrement the directory index
	  because the index specifies the index of given included_directories
	  which is separated by NUL and its index is begun from 1.
	  Note that 0 specifies the current directory of the compilation.
	  see also http://www.dwarfstd.org/doc/dwarf-2.0.0.pdf

Thu Jan 13 00:06:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Add warning messages. [ruby-core:34062]

Thu Jan 13 00:00:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Some syscall return unsigned or pointer value.
	  Therefore we should only check the result is -1 or not. [ruby-core:34062]

Wed Jan 12 23:55:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Add 64bit Linux support. Some syscall takes
	  long type arguments.

Wed Jan 12 19:37:10 2011  Tanaka Akira  <akr@fsij.org>

	* vm_dump.c: parenthesize macro arguments.

Wed Jan 12 19:28:23 2011  Tanaka Akira  <akr@fsij.org>

	* vm.c (thread_free): reset ruby_current_thread if it points the
	  thread to free.
	* gc.c (slot_sweep): don't call RUBY_VM_SET_FINALIZER_INTERRUPT if
	  there is no current thread.
	  [ruby-dev:43000]

Wed Jan 12 19:09:29 2011  Tanaka Akira  <akr@fsij.org>

	* enum.c (sort_by_i): reenter check more strictly.
	  (sort_by_cmp): ditto.
	  [ruby-dev:43003] reported by Usaku NAKAMURA.

Wed Jan 12 16:25:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
